# telegram-tictactoe-miniapp

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py  promo.py  schemas.py  security.py  telegram_client.py
docs/: DEPLOYMENT.md
scripts/: set_webhook.sh
tests/: conftest.py  test_api.py  test_promo.py  test_security.py
web/: app.js  index.html  styles.css
