[project]
name = "telegram-tictactoe-miniapp"
version = "0.1.0"
description = ""
authors = [{name = "Yan Bubenok", email = "yan@bubenok.com"}]
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
